--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -2,7 +2,7 @@ name: Hola Mundo
 on:
   push: 
     branches: 
-      'main'
+     - 'main'
   pull_request:
     branches: 'main'
 jobs:
@@ -11,5 +11,10 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
-            - name: Run hola-mundo.js
+            - name: Setup Node 
+              uses: actions/setup-node@v4
+              with:
+                node-version: '21'
+            - name: Run the code
               run: node holaMundo.js
+    
